<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CounterClock</string>
    <string name="action_settings">Settings</string>
    <string name="test">Test</string>
    <string name="test_string">Testing, Testing</string>
    <string name="screen_off">Screen Off</string>
    <string name="make_admin">Make Device Admin</string>
    <string name="device_admin" translatable="false">@string/app_name</string>
    <string name="device_admin_description">Enables the screen off feature</string>
    
    <!-- Clock Activity -->
    <string name="touch_circ_desc">Touch to Show Buttons</string>
    <string name="unlock_desc">Unlock Device</string>
    <string name="pause_desc">Pause the timer</string>
    <string name="stop_desc">Stop the timer (Resets to 0:00)</string>
    <string name="lock_desc">Re-Lock Device (Screen-Off)</string>
    
    <!-- Clock -->
	<string name="colon">:</string>
	<string name="stop">stop</string>
	<string name="unlock">unlock</string>
	<string name="pause">pause</string>
	
	<string name="test_minute">04</string>
	<string name="test_second">20</string>
	
</resources>
