<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- Clock -->
    <TextView 
        android:id="@+id/txtMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_toLeftOf="@+id/txtColon"
        android:layout_centerVertical="true"
        android:text="@string/test_minute"
        android:textSize="@dimen/minute_font_size" />
    <TextView 
        android:id="@id/txtColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/colon"
        android:textSize="@dimen/colon_font_size" />
    <TextView 
        android:id="@+id/txtSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtColon"
        android:layout_centerVertical="true"
        android:text="@string/test_second"
        android:textSize="@dimen/second_font_size" />
       
    <!-- Buttons -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp" 
        android:layout_alignParentBottom="true" >
        <ImageButton 
            android:id="@+id/btnShowButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/touch_circle"
            android:contentDescription="@string/touch_circ_desc" />
        <Button
            android:id="@+id/btnUnlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnShowButtons"
            android:layout_centerHorizontal="true"
            android:text="@string/unlock"
            android:visibility="invisible" />
        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnScreenOff"
            android:text="@string/stop"
            android:visibility="invisible" />
        <Button
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnStop"
            android:layout_alignBottom="@+id/btnStop"
            android:layout_toRightOf="@+id/btnScreenOff"
            android:text="@string/pause"
            android:visibility="invisible" />
        <Button
            android:id="@+id/btnScreenOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPause"
            android:layout_centerHorizontal="true"
            android:text="@string/screen_off"
            android:visibility="invisible" />

    </RelativeLayout>

        
</RelativeLayout>
